--- a/debian/gdm.8.pod
+++ b/debian/gdm.8.pod
@@ -1,39 +1,39 @@
 =head1 NAME
 
-gdm3 - GNOME Display Manager
+gdm - GNOME Display Manager
 
 =head1 SYNOPSIS
 
-gdm3
+gdm
 
 =head1 DESCRIPTION
 
-B<gdm3> is the equivalent of xdm(1x) or wdm(1x), but uses the GNOME
+B<gdm> is the equivalent of xdm(1x) or wdm(1x), but uses the GNOME
 libraries to provide a GNOME look-and-feel. It provides the GNOME
 equivalent of a "login:" prompt.
 
-B<gdm3> reads F</etc/gdm3/daemon.conf> for its configuration. For each
+B<gdm> reads F</etc/gdm/daemon.conf> for its configuration. For each
 local display, gdm starts an X server and runs a minimal GNOME session
 including a graphical greeter. If configured so, the main gdm process
 also listens for XDMCP requests from remote displays. These requests
-can either be direct, causing B<gdm3> to start a session on the remote
+can either be direct, causing B<gdm> to start a session on the remote
 display, or indirect, causing a chooser to be opened.
 
-When managing a display, B<gdm3> attempts to execute
-F</etc/gdm3/Init/>I<display>, or F</etc/gdm3/Init/Default> if that does
-not exist. When a user logs in, B<gdm3> first attempts
-F</etc/gdm3/PreSession/>I<display> (or F</etc/gdm3/PreSession/Default>),
+When managing a display, B<gdm> attempts to execute
+F</etc/gdm/Init/>I<display>, or F</etc/gdm/Init/Default> if that does
+not exist. When a user logs in, B<gdm> first attempts
+F</etc/gdm/PreSession/>I<display> (or F</etc/gdm/PreSession/Default>),
 and then one of the sessions defined in F</usr/share/xsessions>. When 
 the session has completed, B<gdm> attempts to run
-F</etc/gdm3/PostSession/>I<display>, or
-F</etc/gdm3/PostSession/>I<Default>.
+F</etc/gdm/PostSession/>I<display>, or
+F</etc/gdm/PostSession/>I<Default>.
 
-B<gdm3> maintains information about the displays it is managing in
-F</var/lib/gdm3>. This includes xauth information, so this directory
+B<gdm> maintains information about the displays it is managing in
+F</var/lib/gdm>. This includes xauth information, so this directory
 is not readable to normal users.
 
-B<gdm3> uses PAM to perform authentication using the config file
-F</etc/pam.d/gdm3>.
+B<gdm> uses PAM to perform authentication using the config file
+F</etc/pam.d/gdm>.
 
 =head1 ENVIRONMENT
 
@@ -42,7 +42,7 @@ F</etc/pam.d/gdm3>.
 =item XAUTHORITY
 
 Upon session startup, GDM sets the XAUTHORITY environment variable to a
-session-specific file in F</var/run/gdm3>.
+session-specific file in F</var/run/gdm>.
 
 Applications and scripts that assume this file is set to F<~/.Xauthority>
 will not work. To access the display you need both DISPLAY and
