--- a/debian/po-up/cs.po
+++ b/debian/po-up/cs.po
@@ -1,11 +1,11 @@
-# Czech translation of package gdm3.
+# Czech translation of package gdm.
 # Copyright (C) 2010 Michal Simunek <michal.simunek@gmail.com>
-# This file is distributed under the same license as the gdm3 package.
+# This file is distributed under the same license as the gdm package.
 # Michal Simunek <michal.simunek@gmail.com>, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gdm3\n"
+"Project-Id-Version: gdm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-28 22:48+0200\n"
 "PO-Revision-Date: 2010-05-03 18:02+0200\n"
