--- a/debian/po-up/es.po
+++ b/debian/po-up/es.po
@@ -1,6 +1,6 @@
-# gdm3 po-debconf translation to Spanish
+# gdm po-debconf translation to Spanish
 # Copyright (C) 2010 Software in the Public Interest
-# This file is distributed under the same license as the gdm3 package.
+# This file is distributed under the same license as the gdm package.
 #
 # Changes:
 #   - Initial translation
@@ -26,7 +26,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gdm3 patches\n"
+"Project-Id-Version: gdm patches\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-28 22:48+0200\n"
 "PO-Revision-Date: 2010-04-22 09:20+0200\n"
