--- a/debian/po-up/gu.po
+++ b/debian/po-up/gu.po
@@ -1,11 +1,11 @@
-# Gujarati translation of gdm3 for Debian specific strings from patches.
+# Gujarati translation of gdm for Debian specific strings from patches.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Kartik Mistry <kartik@debian.org>, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gdm3-patches-gujarati\n"
+"Project-Id-Version: gdm-patches-gujarati\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-28 22:48+0200\n"
 "PO-Revision-Date: 2010-04-22 08:39+0530\n"
