--- a/debian/po-up/pt.po
+++ b/debian/po-up/pt.po
@@ -1,11 +1,11 @@
-# Portuguese translation for gdm3 package
+# Portuguese translation for gdm package
 # Copyright (C) 2010 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the gdm3 package.
+# This file is distributed under the same license as the gdm package.
 # Pedro Ribeirio <p.m42.ribeiro@gmail.com>, 2010
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gdm3 2.30.2-1\n"
+"Project-Id-Version: gdm 2.30.2-1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-28 22:48+0200\n"
 "PO-Revision-Date: 2010-04-30 23:00+0000\n"
