--- a/debian/po-up/ru.po
+++ b/debian/po-up/ru.po
@@ -5,7 +5,7 @@
 # Yuri Kozlov <yuray@komyakino.ru>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gdm3 new\n"
+"Project-Id-Version: gdm new\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-28 22:48+0200\n"
 "PO-Revision-Date: 2010-04-22 20:14+0400\n"
